<resources>
    <string name="app_name">Growth Code Lab</string>

    <string name="s_data_binding">Data Binding</string>
    <string name="s_handler">Handler</string>
    <string name="s_fit_system_window">Fit System Window</string>
    <string name="s_full_screen">Full Screen</string>
    <string name="s_web_view">WebView</string>
    <string name="court_counter">Court Counter</string>
    <string name="s_fit_system_window_tool_bar_title">Fit System Window</string>
    <string name="s_recycler">Recycler</string>
    <string name="s_measurement">Measurement</string>
    <string name="s_drawable">Drawable</string>
    <string name="s_play_ground">Play Ground</string>
    <string name="s_layout_inflater">Layout Inflater</string>
    <string name="s_view_pager">View Pager</string>
    <string name="s_tab_host">Tab Host</string>
    <string name="s_scene_transition">Scene Transition</string>
    <string name="touch_again">Touch Again</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="window">Window</string>
    <string name="fragment_play_ground">Fragment Play Ground</string>
    <string name="jet_pack">Jet Pack</string>
    <string name="words">Words</string>
    <string name="view_showcase">View Showcase</string>
    <string name="material">Material</string>
    <string name="image_view">ImageView</string>
    <string name="drawer">Drawer</string>
    <string name="span">Span</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="format_by_text_style">Format by text style</string>
    <string name="format_by_span">Format by span</string>
    <string name="image_view_scale_type">ScaleType</string>
    <string name="tab_layout">TabHost</string>
    <string name="build_tab_layout">Build Tab Host</string>
    <string name="touch_again_not_consume_move_and_up">Not Consume Move and Up</string>

    <string name="s_add_new_note">Add New Note</string>
    <string name="s_navigate">Navigate</string>

    <string name="s_data_binding_user">User</string>
    <string name="s_data_binding_notes">Notes</string>
    <string name="s_data_binding_login">Login</string>
    <string name="s_data_binding_additional_info">Additional Info</string>

    <string name="s_data_binding_user_hello">Hello I am %1$s %2$s.</string>
    <string name="s_data_binding_user_say_hello">Say Hello</string>
    <string name="s_data_binding_user_change_user_name">Change User Name</string>
    <string name="s_data_binding_add_new_note">Add New Note</string>

    <string name="s_web_view_start_loading">Start Loading</string>
    <string name="s_web_view_load_registry">Load Registry</string>
    <string name="s_web_view_load_finished">Load Finished!</string>
    <string name="s_recycler_item_text">Item #%1$d</string>

    <string name="s_drawable_clip">Clip Drawable</string>
    <string name="s_footer_content">Suit Yourself</string>

    <string name="s_like">LIKE</string>
    <string name="s_like_item">Like item %1$d</string>
    <string name="s_like_item_count">Like %1$d</string>
    <string name="s_user_name">User Name</string>
    <string name="s_password">Password</string>
    <string name="s_card_first">First Card</string>
    <string name="s_card_second">Second Card</string>
    <string name="s_card_change">Change</string>
    <string name="s_scene_title">Scenes</string>
    <string name="s_scene_first_line">First Line</string>
    <string name="s_scene_second_line">Second Line</string>
    <string name="s_scene_change">Change Scene</string>
    <string name="s_view_animator_change_tip">Change tip</string>
    <string name="s_view_animator_change_another">Change another tip</string>
    <string name="s_view_animator_change_completed">Change completed</string>
    <string name="s_card_tips">Tips</string>
    <string name="s_card_tips_another">Another Tips</string>
    <string name="s_card_completed">Completed</string>
    <string name="s_handler_send_msg">Send Message From Worker</string>
    <string name="s_open_contact">Open Contacts</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_show_log">show log</string>
    <string name="book_change">Change</string>
    <string name="view_attribute">Access View Attribute in Data Binding</string>
    <string name="view_attribute_show_log">Show Log View Attribute</string>
    <string name="view_reference_show_log">Show Log View Reference</string>
    <string name="show_normal_popup">Show Normal Popup</string>
    <string name="show_full_popup">Show Full Popup</string>
    <string name="dismiss">Dismiss</string>

    <string name="change_size">Change Size</string>
    <string name="change_visibility">Change Visibility</string>

    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>

    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>

    <string name="like_index">Index:%1$d</string>
    <string name="like_amount">Amount:%1$d</string>
    <string name="like_show_tip">Show Tip</string>
    <string name="show_detail">Show Detail</string>
    <string name="find">Find</string>
    <string name="operation">Operation</string>
    <string name="section_a">Section A</string>
    <string name="section_b">Section B</string>
    <string name="section_details">Section Details</string>

    <string name="search_hint">I am a search hint.</string>
    <string name="window_inset">Window Inset</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="slideshow">Slideshow</string>
    <string name="settings">Settings</string>

    <string name="gone_margin">Gone Margin</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="with_gone_margin">With Gone Margin</string>
    <string name="without_gone_margin">Without Gone Margin</string>
    <string name="who_am_i">Who am i</string>

    <string name="add_view_to_constraint">Add View to Constraint</string>
    <string name="fit_system_window">Fit system window</string>
    <string name="navigate_to_drawer_b">Navigate to Drawer B</string>
    <string name="back_to_drawer_a">Back to Drawer A</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="initial_point">0</string>
    <string name="three_points">+3 POINTS</string>
    <string name="two_points">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="toolbar_title">I am a title</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="save_task">Save</string>
    <string name="article_title">Article Title</string>
    <string name="article_title_hint">Please input your title</string>
    <string name="save_article">Save Article</string>
    <string name="how_to_be_happy">How to be Happy</string>
    <string name="article_content">No one knows. And&#8320;</string>

    <string name="article_like_amount">Likes:%1$s</string>
    <string name="article_like">Like</string>

    <string name="cheese_search">search</string>
    <string name="phone_save">Save</string>

    <string name="navigation">Navigation</string>
      <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="home">Home</string>
    <string name="deep_link">Deep Link</string>

     <!-- Screen strings -->
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="navigate_to_game">Navigate to game</string>
    <string name="game">Game</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
    <string name="start">START</string>
    <string name="first_option">First Option</string>
    <string name="second_option">Second Option</string>
    <string name="next_match">Next Match</string>
    <string name="try_again">Try Again?</string>
    <string name="sign_up">Sign Up</string>
    <string name="play">Play</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>

    <string name="perform_search">Perform Search</string>
    <string name="top_choice">Top Choice</string>

    <string name="add_book">Add Book</string>
    <string name="add_book_active">Add Book Active</string>
    <string name="reorder">Reorder</string>
    <string name="clear_all">Clear All</string>
    <string name="hello_world">Hello World</string>
</resources>
