<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/destination_nav_home">
    <fragment
        android:id="@+id/destination_nav_home"
        android:name="com.learn.growthcodelab.navigation.NavHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_nav_home">
        <action
            android:id="@+id/action_flow_step_one"
            app:destination="@id/destination_nav__step_one"
            />
    </fragment>
    <fragment
        android:id="@+id/destination_nav__step_one"
        android:name="com.learn.growthcodelab.navigation.FlowStepFragment"
        android:label="@string/step_one"
        tools:layout="@layout/fragment_nav_flow_step_one">
        <action
            android:id="@+id/action_flow_step_two"
            app:destination="@id/destination_nav_step_two"
            />
    </fragment>
    <fragment
        android:id="@+id/destination_nav_step_two"
        android:name="com.learn.growthcodelab.navigation.FlowStepFragment"
        android:label="@string/step_two"
        tools:layout="@layout/fragment_nav_flow_step_two">

    </fragment>
    <fragment
        android:id="@+id/navSettingsFragment"
        android:name="com.learn.growthcodelab.navigation.NavSettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_nav_settings" />
</navigation>