<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="false"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/red"
                android:textColor="@color/color_state_list_option_text"
                app:chipBackgroundColor="@color/color_state_list_option"
                app:chipStrokeColor="@color/color_state_list_option_stroke"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="@color/color_state_list_option_text"
                app:chipBackgroundColor="@color/color_state_list_option"
                app:chipStrokeColor="@color/color_state_list_option_stroke"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:textColor="@color/color_state_list_option_text"
                app:chipBackgroundColor="@color/color_state_list_option"
                app:chipStrokeColor="@color/color_state_list_option_stroke"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</layout>