<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="user"
            type="com.learn.growthcodelab.databinding.model.User"/>
        
        <variable
            name="clickHandler"
            type="com.learn.growthcodelab.activity.DataBindingActivity.ClickHandler"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:id="@+id/fl_data_binding_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        </FrameLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_data_binding_user"
            android:onClick="@{clickHandler::onUserClick}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_data_binding_notes"
            android:onClick="@{clickHandler::onNotesClick}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_data_binding_login"
            android:onClick="@{clickHandler::onLoginClick}"
            />
    </LinearLayout>
</layout>