<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>

        <variable
            name="showLogCallback"
            type="com.learn.growthcodelab.databinding.twoway.ShowLogCallback"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/view_attribute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_show_log_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/view_attribute_show_log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_log"/>
    <!--             android:onClick="@{view -> showLogCallback.onShowLogClicked(etLog, test.text)}" -->
        <Button
            android:id="@+id/btn_show_log_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/view_reference_show_log"
            android:onClick="@{view -> showLogCallback.onShowLogClicked(etLog)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_log_attribute"/>

    </android.support.constraint.ConstraintLayout>

</layout>
