<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editArticleViewModel"
            type="com.learn.growthcodelab.jetpack.livedata.shared.EditArticleViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginTop="16dp"
            android:text="@string/article_title"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_article_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/article_title_hint"
            android:textSize="@dimen/text_size_normal"
            android:text="@{editArticleViewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_article_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_article"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@+id/et_article_title"
            app:layout_constraintTop_toBottomOf="@+id/et_article_title"
            android:onClick="@{view -> editArticleViewModel.saveArticleTitle()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>