<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="book"
            type="com.learn.growthcodelab.databinding.model.Book"/>

        <variable
            name="onClickedListener"
            type="android.view.View.OnClickListener"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/book_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_book_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@={book.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_book_author"
            app:layout_constraintStart_toStartOf="@+id/tv_book_title"/>

        <EditText
            android:id="@+id/et_book_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={book.author}"
            app:layout_constraintStart_toStartOf="@+id/et_book_title"
            app:layout_constraintTop_toBottomOf="@+id/et_book_title"/>

        <android.support.constraint.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="tv_book_title,tv_book_author"
            />

        <Button
            android:id="@+id/btn_book_show_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/book_show_log"
            android:onClick="@{onClickedListener::onClick}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_book_author"/>

        <Button
            android:id="@+id/btn_book_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_change"
            android:onClick="@{onClickedListener::onClick}"
            app:layout_constraintStart_toStartOf="@+id/btn_book_show_log"
            app:layout_constraintTop_toBottomOf="@+id/btn_book_show_log"/>
    </android.support.constraint.ConstraintLayout>

</layout>
